# ahrs-debug-rig

./: .gitignore  README.md  rustfmt.toml
src/ahrs-common/: Cargo.toml
src/ahrs-common/src/: lib.rs  utils.rs
src/ahrs-gateway/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
src/ahrs-gateway/.cargo/: config.toml
src/ahrs-gateway/src/: lib.rs
src/ahrs-imu/: Cargo.toml  build.rs  openocd.gdb
src/ahrs-imu/.cargo/: config.toml
src/ahrs-imu/src/: hardware.rs  lib.rs  main.rs  types.rs  utils.rs
src/ahrs-imu/src/drivers/: imu.rs  mod.rs  rgb_led.rs
src/ahrs-imu/src/hal/: mod.rs  peripherals.rs
src/ahrs-imu/src/tasks/: imu.rs  mod.rs  status.rs  transfer.rs
src/stm32-firmware/: Cargo.toml  build.rs  memory.x  openocd.gdb
src/stm32-firmware/.cargo/: config.toml
src/stm32-firmware/src/: hardware.rs  lib.rs  main.rs  payload.rs  status.rs  utils.rs
