# SPDX-License-Identifier: Apache-2.0.
# Copyright (C) 2026-present ahrs-debug-rig project and contributors.

# Project package info section.
[package]
name        = "ahrs-common"
version     = "0.1.0"
description = "Shared declarations among IMU handler & gateway"
authors     = ["Alexander <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/ahrs-debug-rig"
license     = "Apache-2.0"
edition     = "2024"

# Project dependencies section.
[dependencies]
# Set the panicking behavior to halt.
panic-halt = "1.0.0"
# Inertial Measurement Unit Data Transfer Protocol (IDTP) - network protocol
# used for transferring IMU data.
idtp = { git = "https://github.com/alkuzin/idtp" }

# Project building settings during release.
[profile.release]
# Turn on maximum optimizations.
opt-level = 'z'
# Link-time-optimizations (LTO) for further size reduction.
lto = true
